[package]
name = "yubihsm"
version = "0.43.0-pre"
description = """
Pure Rust client for YubiHSM2 devices with support for HTTP and
USB-based access to the device. Supports most HSM functionality
including ECDSA, Ed25519, HMAC, and RSA.
"""
license = "Apache-2.0 OR MIT"
authors = ["Tony Arcieri <tony@iqlusion.io>"]
documentation = "https://docs.rs/yubihsm"
repository = "https://github.com/iqlusioninc/yubihsm.rs"
readme = "README.md"
categories = ["cryptography", "hardware-support"]
keywords = ["ecdsa", "ed25519", "hmac", "hsm", "yubikey"]
edition = "2021"
rust-version = "1.70"

[dependencies]
aes = { version = "0.8", features = ["zeroize"] }
bitflags = "2"
cmac = "0.7"
cbc = "0.1"
ccm = { version = "0.5", features = ["std"] }
digest = { version = "0.10", default-features = false }
ecdsa = { branch = "master", default-features = false, features = ["pkcs8"], git = "http://github.com/ArnoldTumukunde/signatures.git" }
ed25519 = { branch = "master", git = "http://github.com/ArnoldTumukunde/signatures.git" }
log = "0.4"
num-traits = "0.2"
p256 = { branch = "master", default-features = false, features = ["ecdsa"], git = "http://github.com/ArnoldTumukunde/elliptic-curves.git" }
p384 = { branch = "master", default-features = false, features = ["ecdsa"], git = "http://github.com/ArnoldTumukunde/elliptic-curves.git" }
serde = { version = "1", features = ["serde_derive"] }
rand_core = { version = "0.6", features = ["std"] }
rsa = { branch = "master", git = "http://github.com/ArnoldTumukunde/rsa.git" }
signature = { branch = "master", features = ["derive"], git = "https://github.com/ArnoldTumukunde/traits.git" }
sha1 = { version = "0.10", features = ["oid"] }
sha2 = { version = "0.10", features = ["oid"] }
spki = { version = "0.8.0-rc.1", default-features = false }
subtle = "2.4.1"
thiserror = "1"
time = { version = "0.3", features = ["serde"] }
uuid = { version = "1", default-features = false }
zeroize = { version = "1.8.1", features = ["zeroize_derive"] }
hybrid-array = "0.2.0-rc.11"
crypto-bigint = {branch ="master", git = "https://github.com/ArnoldTumukunde/crypto-bigint.git"}

# optional dependencies
ed25519-dalek = {branch = "main", optional = true, features = ["rand_core"], git = "http://github.com/ArnoldTumukunde/ed25519-dalek.git" }
hmac = { version = "0.12", optional = true }
k256 = { branch = "master", optional = true, features = ["ecdsa", "sha256"], git = "http://github.com/ArnoldTumukunde/elliptic-curves.git" }
pbkdf2 = { version = "0.12", optional = true, default-features = false, features = ["hmac"] }
serde_json = { version = "1", optional = true }
rusb = { version = "0.9.4", optional = true }
tiny_http = { version = "0.12", optional = true }

[dev-dependencies]
ed25519-dalek = {branch = "main", git = "http://github.com/ArnoldTumukunde/ed25519-dalek.git"}
once_cell = "1.20"
rsa = { branch = "master", features = ["sha1", "sha2"], git = "http://github.com/ArnoldTumukunde/rsa.git" }
p256 = { branch = "master", features = ["ecdsa"], git = "http://github.com/ArnoldTumukunde/elliptic-curves.git" }
x509-cert = { version = "0.2.5", features = ["builder"] }

[features]
default = ["http", "passwords", "setup"]
http-server = ["tiny_http"]
http = []
mockhsm = ["ecdsa/arithmetic", "ed25519-dalek", "p256/ecdsa", "secp256k1"]
passwords = ["hmac", "pbkdf2"]
secp256k1 = ["k256"]
setup = ["passwords", "serde_json", "uuid/serde"]
untested = []
usb = ["rusb"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[[example]]
name = "connector_http_server"
required-features = ["http-server", "usb"]
